// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: v-if codegen basic v-if 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, createVNode: _createVNode, createBlock: _createBlock, createCommentVNode: _createCommentVNode } = _Vue
    
    return (_openBlock(), ok
      ? _createBlock(\\"div\\", { key: 0 })
      : _createCommentVNode(\\"v-if\\", true))
  }
}"
`;

exports[`compiler: v-if codegen template v-if 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, createVNode: _createVNode, Fragment: _Fragment, createBlock: _createBlock, createCommentVNode: _createCommentVNode } = _Vue
    
    return (_openBlock(), ok
      ? _createBlock(_Fragment, { key: 0 }, [
          _createVNode(\\"div\\"),
          \\"hello\\",
          _createVNode(\\"p\\")
        ])
      : _createCommentVNode(\\"v-if\\", true))
  }
}"
`;

exports[`compiler: v-if codegen template v-if w/ single <slot/> child 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, renderSlot: _renderSlot, createCommentVNode: _createCommentVNode } = _Vue
    
    return (_openBlock(), ok
      ? _renderSlot($slots, \\"default\\", { key: 0 })
      : _createCommentVNode(\\"v-if\\", true))
  }
}"
`;

exports[`compiler: v-if codegen v-if + v-else 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, createVNode: _createVNode, createBlock: _createBlock, createCommentVNode: _createCommentVNode } = _Vue
    
    return (_openBlock(), ok
      ? _createBlock(\\"div\\", { key: 0 })
      : _createBlock(\\"p\\", { key: 1 }))
  }
}"
`;

exports[`compiler: v-if codegen v-if + v-else-if + v-else 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, createVNode: _createVNode, createBlock: _createBlock, createCommentVNode: _createCommentVNode, Fragment: _Fragment } = _Vue
    
    return (_openBlock(), ok
      ? _createBlock(\\"div\\", { key: 0 })
      : orNot
        ? _createBlock(\\"p\\", { key: 1 })
        : _createBlock(_Fragment, { key: 2 }, [\\"fine\\"]))
  }
}"
`;

exports[`compiler: v-if codegen v-if + v-else-if 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, createVNode: _createVNode, createBlock: _createBlock, createCommentVNode: _createCommentVNode } = _Vue
    
    return (_openBlock(), ok
      ? _createBlock(\\"div\\", { key: 0 })
      : orNot
        ? _createBlock(\\"p\\", { key: 1 })
        : _createCommentVNode(\\"v-if\\", true))
  }
}"
`;

exports[`compiler: v-if codegen v-if on <slot/> 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { openBlock: _openBlock, renderSlot: _renderSlot, createCommentVNode: _createCommentVNode } = _Vue
    
    return (_openBlock(), ok
      ? _renderSlot($slots, \\"default\\", { key: 0 })
      : _createCommentVNode(\\"v-if\\", true))
  }
}"
`;
